--- a/src/Makefile
+++ b/src/Makefile
@@ -27,6 +27,7 @@ EVENTS = \
 	${DESTROOT}/Events/2011/October/BAT/index.html \
 	${DESTROOT}/Events/2012/October/BAT/index.html \
 	${DESTROOT}/Events/2013/June/BAT/index.html \
+	${DESTROOT}/Events/2013/September/BAT/index.html \
 	${DESTROOT}/Documents/Requirements/event_hosting.html
 
 all: ${STYLE} ${PAGES} ${EVENTS}
@@ -66,6 +67,10 @@ ${DESTROOT}/Events/2012/October/BAT/index.html: bat0812.html pre_root.html post_
 
 ${DESTROOT}/Events/2013/June/BAT/index.html: bat0613.html pre_root.html post_root.html
 	${MKDIR} ${DESTROOT}/Events/2013/June/BAT
+	${CAT} pre_root.html $< post_root.html > $@
+
+${DESTROOT}/Events/2013/September/BAT/index.html: bat0913.html pre_root.html post_root.html
+	${MKDIR} ${DESTROOT}/Events/2013/September/BAT
 	${CAT} pre_root.html $< post_root.html > $@
 
 ${DESTROOT}/Documents/Requirements/event_hosting.html: batreqs.html pre_root.html post_root.html
