--- a/src/cthon/Makefile
+++ b/src/cthon/Makefile
@@ -36,7 +36,8 @@ YEARS = \
 	${DESTROOT}/Documents/ConnectAThon/2010/index.html \
 	${DESTROOT}/Documents/ConnectAThon/2011/index.html \
 	${DESTROOT}/Documents/ConnectAThon/2012/index.html \
-	${DESTROOT}/Documents/ConnectAThon/2013/index.html
+	${DESTROOT}/Documents/ConnectAThon/2013/index.html \
+	${DESTROOT}/Documents/ConnectAThon/2014/index.html
 
 all: ${TALKS} ${YEARS}
 
