Moved to the next event

--- a/src/Makefile
+++ b/src/Makefile
@@ -78,6 +78,10 @@ ${DESTROOT}/Events/2014/June/BAT/index.html: bat0614.html pre_root.html post_roo
 	${MKDIR} ${DESTROOT}/Events/2014/June/BAT
 	${CAT} pre_root.html $< post_root.html > $@
 
+${DESTROOT}/Events/2014/October/BAT/index.html: bat1006.html pre_root.html post_root.html
+	${MKDIR} ${DESTROOT}/Events/2014/October/BAT
+	${CAT} pre_root.html $< post_root.html > $@
+
 ${DESTROOT}/Documents/Requirements/event_hosting.html: batreqs.html pre_root.html post_root.html
 	${MKDIR} ${DESTROOT}/Documents/Requirements
 	${CAT} pre_root.html $< post_root.html > $@
