Finish off new BAT

--- a/src/Makefile
+++ b/src/Makefile
@@ -29,6 +29,7 @@ EVENTS = \
 	${DESTROOT}/Events/2013/June/BAT/index.html \
 	${DESTROOT}/Events/2013/September/BAT/index.html \
 	${DESTROOT}/Events/2014/June/BAT/index.html \
+	${DESTROOT}/Events/2014/October/BAT/index.html \
 	${DESTROOT}/Documents/Requirements/event_hosting.html
 
 all: ${STYLE} ${PAGES} ${EVENTS}
