Added 2014 bat talk to the Makefile
Fixed a couple typos with talks.html
Added a couple things to .gitignore

Signed-off-by: Steve Dickson <steved@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 Documents/BakeAThon/2012/index.html
-Documents/BakeAThon/index.html
+Documents/BakeAThon/talks.html
 Documents/ConnectAThon/1995/index.html
 Documents/ConnectAThon/1996/index.html
 Documents/ConnectAThon/1997/index.html
@@ -28,6 +28,7 @@ Documents/nasconf/2003/index.html
 Documents/nasconf/2004/index.html
 Documents/nasconf/2005/index.html
 Documents/nasconf/index.html
+Documents/Requirements/
 Events/2013/June/BAT/index.html
 Events/2013/September/
 index.html
