--- a/src/bats/Makefile
+++ b/src/bats/Makefile
@@ -15,13 +15,14 @@ ECHO=/bin/echo
 DESTROOT=../..
 
 TALKS = \
-	${DESTROOT}/Documents/BakeAThon/index.html
+	${DESTROOT}/Documents/BakeAThon/talks.html
 
 #
 # Yeah, this fails if we do multiple talks in a year!
 #
 YEARS = \
-	${DESTROOT}/Documents/BakeAThon/2012/index.html
+	${DESTROOT}/Documents/BakeAThon/2012/index.html \
+	${DESTROOT}/Documents/BakeAThon/2014/index.html
 
 all: ${TALKS} ${YEARS}
 
@@ -31,7 +32,7 @@ all: ${TALKS} ${YEARS}
 ${DESTROOT}/Documents/BakeAThon/%/index.html: %.html pre_dir1_talks.html post_dir1_talks.html
 	${CAT} pre_dir1_talks.html $< post_dir1_talks.html | ${SED} "s/\(.*\)\(YEAR\)\(.*\)/\1 `${ECHO} "$<" | ${SED} "s/\(.*\).html/\1/"` \3/" > $@
 
-${DESTROOT}/Documents/BakeAThon/index.html: talks.html pre_root_talks.html post_root_talks.html
+${DESTROOT}/Documents/BakeAThon/talks.html: talks.html pre_root_talks.html post_root_talks.html
 	${CAT} pre_root_talks.html $< post_root_talks.html > $@
 
 clean:
