--- a/src/Makefile
+++ b/src/Makefile
@@ -30,6 +30,7 @@ EVENTS = \
 	${DESTROOT}/Events/2013/September/BAT/index.html \
 	${DESTROOT}/Events/2014/June/BAT/index.html \
 	${DESTROOT}/Events/2014/October/BAT/index.html \
+	${DESTROOT}/Events/2015/June/BAT/index.html \
 	${DESTROOT}/Documents/Requirements/event_hosting.html
 
 all: ${STYLE} ${PAGES} ${EVENTS}
@@ -81,6 +82,10 @@ ${DESTROOT}/Events/2014/June/BAT/index.html: bat0614.html pre_root.html post_roo
 
 ${DESTROOT}/Events/2014/October/BAT/index.html: bat1006.html pre_root.html post_root.html
 	${MKDIR} ${DESTROOT}/Events/2014/October/BAT
+	${CAT} pre_root.html $< post_root.html > $@
+
+${DESTROOT}/Events/2015/June/BAT/index.html: bat0615.html pre_root.html post_root.html
+	${MKDIR} ${DESTROOT}/Events/2015/June/BAT
 	${CAT} pre_root.html $< post_root.html > $@
 
 ${DESTROOT}/Documents/Requirements/event_hosting.html: batreqs.html pre_root.html post_root.html
