--- a/src/Makefile
+++ b/src/Makefile
@@ -34,6 +34,7 @@ EVENTS = \
 	${DESTROOT}/Events/2015/October/BAT/index.html \
 	${DESTROOT}/Events/2016/June/BAT/index.html \
 	${DESTROOT}/Events/2016/October/BAT/index.html \
+	${DESTROOT}/Events/2017/September/BAT/index.html \
 	${DESTROOT}/Documents/Requirements/event_hosting.html
 
 all: ${STYLE} ${PAGES} ${EVENTS}
@@ -103,6 +104,9 @@ ${DESTROOT}/Events/2016/October/BAT/index.html: bat1016.html pre_root.html post_
 	${MKDIR} ${DESTROOT}/Events/2016/October/BAT
 	${CAT} pre_root.html $< post_root.html > $@
 
+${DESTROOT}/Events/2017/September/BAT/index.html: bat1016.html pre_root.html post_root.html
+	${MKDIR} ${DESTROOT}/Events/2016/October/BAT
+	${CAT} pre_root.html $< post_root.html > $@
 
 ${DESTROOT}/Documents/Requirements/event_hosting.html: batreqs.html pre_root.html post_root.html
 	${MKDIR} ${DESTROOT}/Documents/Requirements
