Add Chuck's presentations at BAT17
Signed-off-by: Tom Haynes <loghyr@primarydata.com>

--- a/src/bats/Makefile
+++ b/src/bats/Makefile
@@ -22,7 +22,8 @@ TALKS = \
 #
 YEARS = \
 	${DESTROOT}/Documents/BakeAThon/2012/index.html \
-	${DESTROOT}/Documents/BakeAThon/2014/index.html
+	${DESTROOT}/Documents/BakeAThon/2014/index.html \
+	${DESTROOT}/Documents/BakeAThon/2017/index.html
 
 all: ${TALKS} ${YEARS}
 
