Updates from the fall bakeathon 2017
Signed-off-by: Steve Dickson <steved@redhat.com>

--- a/DHCP/bat/dhcpd.conf
+++ b/DHCP/bat/dhcpd.conf
@@ -5,12 +5,135 @@
 #
 
 ddns-update-style none;
-option domain-name "nfsv4bat.org";
+option domain-name "nfsv4bat.org ib.nfsv4bat.org";
 option domain-name-servers 172.16.0.1;
 option routers 172.16.0.1;
 
 subnet 172.16.0.0 netmask 255.255.0.0 {
     range 172.16.1.0 172.16.1.253;
     default-lease-time 2592000;
+}
+host ipa.nfsv4bat.org {
+    hardware ethernet 52:54:00:0e:da:90;
+    fixed-address 172.16.0.2;
+}
+host ad.nfsv4bat.org {
+    hardware ethernet 52:54:00:f4:79:b9;
+    fixed-address 172.16.0.3;
+}
+host steved.nfsv4bat.org {
+    hardware ethernet 54:ee:75:86:be:21;
+    fixed-address 172.16.0.5;
+}
+host rhelman.nfsv4bat.org {
+    hardware ethernet 52:54:00:f5:9c:53;
+    fixed-address 172.16.0.6;
+}
+
+host rhelboy.nfsv4bat.org {
+    hardware ethernet 52:54:00:5a:1a:4a;
+    fixed-address 172.16.0.7;
+}
+
+host fedora.nfsv4bat.org {
+    hardware ethernet 52:54:00:ee:e1:15;
+    fixed-address 172.16.0.8;
+}
+
+host pd-mds.nfsv4bat.org {
+    hardware ethernet 52:54:00:7a:f8:19;
+    fixed-address 172.16.0.50;
+}
+host pd-ds.nfsv4bat.org {
+    hardware ethernet 52:54:00:d4:b0:4a;
+    fixed-address 172.16.0.51;
+}
+host redhat-65.nfsv4bat.org {
+    hardware ethernet 6c:0b:84:0c:bf:18;
+    fixed-address 172.16.3.65;
+}
+host redhat-66.nfsv4bat.org {
+    hardware ethernet 00:1c:c0:b1:7d:c2;
+    fixed-address 172.16.3.66;
+}
+
+host rdma-master.nfsv4bat.org {
+    hardware ethernet e0:db:55:0b:b4:aa;
+    fixed-address 172.16.0.100;
+}
+host rdma-storage-02.nfsv4bat.org {
+    hardware ethernet 54:9f:35:0c:24:71;
+    fixed-address 172.16.0.102;
+}
+host rdma-storage-03.nfsv4bat.org {
+    hardware ethernet 54:9f:35:0c:1b:75;
+    fixed-address 172.16.0.103;
+}
+host rdma-storage-04.nfsv4bat.org {
+    hardware ethernet 54:9f:35:0c:2a:95;
+    fixed-address 172.16.0.104;
+}
+
+host rdma-master-bmc.nfsv4bat.org {
+    hardware ethernet e0:db:55:10:78:76;
+    fixed-address 172.16.0.200;
+}
+
+host rdma-storage-02-bmc.nfsv4bat.org {
+    hardware ethernet b0:83:fe:e9:10:72;
+    fixed-address 172.16.0.202;
+}
+host rdma-storage-03-bmc.nfsv4bat.org {
+    hardware ethernet b0:83:fe:e9:46:1d;
+    fixed-address 172.16.0.203;
+}
+host rdma-storage-04-bmc.nfsv4bat.org {
+    hardware ethernet b0:83:fe:e8:f3:b4;
+    fixed-address 172.16.0.204;
+}
+
+host redhat-0.nfsv4bat.org {
+    hardware ethernet 00:23:ae:a2:27:55;
+    fixed-address 172.16.3.0;
+}
+
+host redhat-6.nfsv4bat.org {
+    hardware ethernet 52:54:00:fe:a3:c9;
+    fixed-address 172.16.3.6;
+}
+
+host redhat-7.nfsv4bat.org {
+    hardware ethernet 52:54:00:79:8b:68;
+    fixed-address 172.16.3.7;
+}
+host redhat-67.nfsv4bat.org {
+    hardware ethernet 52:54:00:51:30:45;
+    fixed-address 172.16.3.67;
+}
+host redhat-72.nfsv4bat.org {
+    hardware ethernet 52:54:00:9b:0a:fb;
+    fixed-address 172.16.3.72;
+}
+
+host oracle-100.nfsv4bat.org {
+    hardware ethernet e4:1d:2d:ac:ce:0c;
+    fixed-address 172.16.5.100;
+}
+host oracle-101.nfsv4bat.org {
+    hardware ethernet 0c:c4:7a:6c:6a:9e;
+    fixed-address 172.16.5.101;
+}
+host oracle-201.nfsv4bat.org {
+    hardware ethernet 0c:c4:7a:ad:51:05;
+    fixed-address 172.16.5.201;
+}
+host oracle-102.nfsv4bat.org {
+    hardware ethernet 0c:c4:7a:ab:45:84;
+    fixed-address 172.16.5.102;
+}
+
+host oracle-202.nfsv4bat.org {
+    hardware ethernet 0c:c4:7a:ae:d5:2e;
+    fixed-address 172.16.5.202;
 }
 
