Add new page for March 2018 BAT.
    Signed-off-by: Bill Baker <bill.baker@oracle.com>

--- a/src/Makefile
+++ b/src/Makefile
@@ -35,6 +35,7 @@ EVENTS = \
 	${DESTROOT}/Events/2016/June/BAT/index.html \
 	${DESTROOT}/Events/2016/October/BAT/index.html \
 	${DESTROOT}/Events/2017/September/BAT/index.html \
+	${DESTROOT}/Events/2018/March/BAT/index.html \
 	${DESTROOT}/Documents/Requirements/event_hosting.html
 
 all: ${STYLE} ${PAGES} ${EVENTS}
@@ -106,6 +107,10 @@ ${DESTROOT}/Events/2016/October/BAT/index.html: bat1016.html pre_root.html post_
 
 ${DESTROOT}/Events/2017/September/BAT/index.html: bat0917.html pre_root.html post_root.html
 	${MKDIR} ${DESTROOT}/Events/2017/September/BAT
+	${CAT} pre_root.html $< post_root.html > $@
+
+${DESTROOT}/Events/2018/March/BAT/index.html: bat0318.html pre_root.html post_root.html
+	${MKDIR} ${DESTROOT}/Events/2018/March/BAT
 	${CAT} pre_root.html $< post_root.html > $@
 
 ${DESTROOT}/Documents/Requirements/event_hosting.html: batreqs.html pre_root.html post_root.html
