--- a/src/Makefile
+++ b/src/Makefile
@@ -36,6 +36,7 @@ EVENTS = \
 	${DESTROOT}/Events/2016/October/BAT/index.html \
 	${DESTROOT}/Events/2017/September/BAT/index.html \
 	${DESTROOT}/Events/2018/March/BAT/index.html \
+	${DESTROOT}/Events/2018/September/BAT/index.html \
 	${DESTROOT}/Documents/Requirements/event_hosting.html
 
 all: ${STYLE} ${PAGES} ${EVENTS}
@@ -111,6 +112,10 @@ ${DESTROOT}/Events/2017/September/BAT/index.html: bat0917.html pre_root.html pos
 
 ${DESTROOT}/Events/2018/March/BAT/index.html: bat0318.html pre_root.html post_root.html
 	${MKDIR} ${DESTROOT}/Events/2018/March/BAT
+	${CAT} pre_root.html $< post_root.html > $@
+
+${DESTROOT}/Events/2018/September/BAT/index.html: bat0918.html pre_root.html post_root.html
+	${MKDIR} ${DESTROOT}/Events/2018/September/BAT
 	${CAT} pre_root.html $< post_root.html > $@
 
 ${DESTROOT}/Documents/Requirements/event_hosting.html: batreqs.html pre_root.html post_root.html
