Add information for May 2019 BAT
Signed-off-by: Bill Baker <Bill.Baker@Oracle.com>

--- a/src/Makefile
+++ b/src/Makefile
@@ -37,6 +37,7 @@ EVENTS = \
 	${DESTROOT}/Events/2017/September/BAT/index.html \
 	${DESTROOT}/Events/2018/March/BAT/index.html \
 	${DESTROOT}/Events/2018/September/BAT/index.html \
+	${DESTROOT}/Events/2019/May/BAT/index.html \
 	${DESTROOT}/Documents/Requirements/event_hosting.html
 
 all: ${STYLE} ${PAGES} ${EVENTS}
@@ -116,6 +117,10 @@ ${DESTROOT}/Events/2018/March/BAT/index.html: bat0318.html pre_root.html post_ro
 
 ${DESTROOT}/Events/2018/September/BAT/index.html: bat0918.html pre_root.html post_root.html
 	${MKDIR} ${DESTROOT}/Events/2018/September/BAT
+	${CAT} pre_root.html $< post_root.html > $@
+
+${DESTROOT}/Events/2019/May/BAT/index.html: bat0519.html pre_root.html post_root.html
+	${MKDIR} ${DESTROOT}/Events/2019/May/BAT
 	${CAT} pre_root.html $< post_root.html > $@
 
 ${DESTROOT}/Documents/Requirements/event_hosting.html: batreqs.html pre_root.html post_root.html
