--- a/DNS/bat/named.conf
+++ b/DNS/bat/named.conf
@@ -8,14 +8,16 @@
 //
 
 options {
-	listen-on port 53 { 127.0.0.1; 172.16.0.1; };
-	listen-on-v6 port 53 { ::1; };
+	listen-on port 53 { 127.0.0.1; 172.16.0.4; };
+	listen-on-v6 port 53 { ::1; fc00::4; };
 	directory 	"/var/named";
 	dump-file 	"/var/named/data/cache_dump.db";
 	statistics-file "/var/named/data/named_stats.txt";
 	memstatistics-file "/var/named/data/named_mem_stats.txt";
+	secroots-file	"/var/named/data/named.secroots";
+	recursing-file	"/var/named/data/named.recursing";
 	allow-query     { localhost; 172.16.0.0/16; };
-	
+
 	/* 
 	 - If you are building an AUTHORITATIVE DNS server, do NOT enable recursion.
 	 - If you are building a RECURSIVE (caching) DNS server, you need to enable 
@@ -30,17 +32,19 @@ options {
 
 	dnssec-enable no;
 	dnssec-validation no;
-	dnssec-lookaside auto;
 
 	forward only;
-	forwarders {10.192.20.245 ; 10.192.206.245 ; };
-
-	/* Path to ISC DLV key */
-	bindkeys-file "/etc/named.iscdlv.key";
+	forwarders {8.8.8.8 ; 4.4.4.4 ; };
+	/* forwarders {10.192.20.245 ; 10.192.206.245 ; }; */ 
+	/* forwarders {10.16.60.14; 10.16.60.21; 10.16.255.3; }; */
 
 	managed-keys-directory "/var/named/dynamic";
 
 	pid-file "/run/named/named.pid";
+	session-keyfile "/run/named/session.key";
+
+	/* https://fedoraproject.org/wiki/Changes/CryptoPolicy */
+	include "/etc/crypto-policies/back-ends/bind.config";
 };
 
 logging {
@@ -59,9 +63,21 @@ zone "nfsv4bat.org" IN {
  	type master;
  	file "nfsv4bat.org.zone";
 };
-zone "0.16.172.in-addr.arpa" IN {
+zone "ib.nfsv4bat.org" IN {
+ 	type master;
+ 	file "ib.nfsv4bat.org.zone";
+};
+zone "vlan.nfsv4bat.org" IN {
+ 	type master;
+ 	file "vlan.nfsv4bat.org.zone";
+};
+zone "roce.nfsv4bat.org" IN {
+ 	type master;
+ 	file "roce.nfsv4bat.org.zone";
+};
+zone "172.in-addr.arpa" IN {
 	type master;
-	file "172-16-0.zone";
+	file "172.in-addr.arpa.zone";
 };
 zone "1.16.172.in-addr.arpa" IN {
 	type master;
