Updates for February 2021 BAT
Signed-off-by: Bill Baker <Bill.Baker@Oracle.com>

--- a/src/bats/Makefile
+++ b/src/bats/Makefile
@@ -24,7 +24,8 @@ YEARS = \
 	${DESTROOT}/Documents/BakeAThon/2012/index.html \
 	${DESTROOT}/Documents/BakeAThon/2014/index.html \
 	${DESTROOT}/Documents/BakeAThon/2017/index.html \
-	${DESTROOT}/Documents/BakeAThon/2018/index.html
+	${DESTROOT}/Documents/BakeAThon/2018/index.html \
+	${DESTROOT}/Documents/BakeAThon/2021/index.html
 
 all: ${TALKS} ${YEARS}
 
