Spring Apr 2024 BAT
Signed-off-by: Steve Dickson <steved@redhat.com>

--- a/src/Makefile
+++ b/src/Makefile
@@ -46,6 +46,7 @@ EVENTS = \
 	${DESTROOT}/Events/2022/Oct/BAT/index.html \
 	${DESTROOT}/Events/2023/Apr/BAT/index.html \
 	${DESTROOT}/Events/2023/Oct/BAT/index.html \
+	${DESTROOT}/Events/2024/Apr/BAT/index.html \
 	${DESTROOT}/Documents/Requirements/event_hosting.html
 
 all: ${STYLE} ${PAGES} ${EVENTS}
@@ -161,6 +162,10 @@ ${DESTROOT}/Events/2023/Apr/BAT/index.html: bat0423.html pre_root.html post_root
 
 ${DESTROOT}/Events/2023/Oct/BAT/index.html: bat1023.html pre_root.html post_root.html
 	${MKDIR} ${DESTROOT}/Events/2023/Oct/BAT
+	${CAT} pre_root.html $< post_root.html > $@
+
+${DESTROOT}/Events/2024/Apr/BAT/index.html: bat0424.html pre_root.html post_root.html
+	${MKDIR} ${DESTROOT}/Events/2024/Apr/BAT
 	${CAT} pre_root.html $< post_root.html > $@
 
 ${DESTROOT}/Documents/Requirements/event_hosting.html: batreqs.html pre_root.html post_root.html
