--- a/src/bats/Makefile
+++ b/src/bats/Makefile
@@ -25,7 +25,8 @@ YEARS = \
 	${DESTROOT}/Documents/BakeAThon/2014/index.html \
 	${DESTROOT}/Documents/BakeAThon/2017/index.html \
 	${DESTROOT}/Documents/BakeAThon/2018/index.html \
-	${DESTROOT}/Documents/BakeAThon/2021/index.html
+	${DESTROOT}/Documents/BakeAThon/2021/index.html \
+	${DESTROOT}/Documents/BakeAThon/2023/index.html
 
 all: ${TALKS} ${YEARS}
 
