--- a/src/Makefile
+++ b/src/Makefile
@@ -47,6 +47,7 @@ EVENTS = \
 	${DESTROOT}/Events/2023/Apr/BAT/index.html \
 	${DESTROOT}/Events/2023/Oct/BAT/index.html \
 	${DESTROOT}/Events/2024/Apr/BAT/index.html \
+	${DESTROOT}/Events/2024/Oct/BAT/index.html \
 	${DESTROOT}/Documents/Requirements/event_hosting.html
 
 all: ${STYLE} ${PAGES} ${EVENTS}
@@ -166,6 +167,10 @@ ${DESTROOT}/Events/2023/Oct/BAT/index.html: bat1023.html pre_root.html post_root
 
 ${DESTROOT}/Events/2024/Apr/BAT/index.html: bat0424.html pre_root.html post_root.html
 	${MKDIR} ${DESTROOT}/Events/2024/Apr/BAT
+	${CAT} pre_root.html $< post_root.html > $@
+
+${DESTROOT}/Events/2024/Oct/BAT/index.html: bat1024.html pre_root.html post_root.html
+	${MKDIR} ${DESTROOT}/Events/2024/Oct/BAT
 	${CAT} pre_root.html $< post_root.html > $@
 
 ${DESTROOT}/Documents/Requirements/event_hosting.html: batreqs.html pre_root.html post_root.html
